<resources>
    <string name="app_name">BerryMe</string>
    <string name="rc_color" translatable="false">splash_background</string>
    <string name="send_messages">Send messages</string>
    <string name="no_picture">There is no picture. Go to upload a picture.</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="name">name</string>
    <string name="introduce">Introduce yourself</string>
    <string name="choose">Choose</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>
    <string name="name_not_empty">Name must not be empty</string>
    <string name="email_not_empty">Email must not be empty</string>
    <string name="password_not_empty">Password must not be empty</string>
    <string name="introduction_not_empty">Introduction must not be empty</string>
    <string name="profile_not_empty">Profile must not be empty</string>
    <string name="chat">Chat</string>
    <string name="calendar">Calendar</string>
    <string name="album">Album</string>
    <string name="todo">To do</string>
    <string name="cancel">cancel</string>
    <string name="accept">accept</string>
    <string name="signup_backpressed_msg">Do you want to cancel sign up?</string>
    <string name="family_name">Family Name</string>
    <string name="create_family">Create Family</string>
    <string name="introduce_family">Introduce about your family</string>
    <string name="family_name_not_empty">Family must not be empty</string>
    <string name="family_introduction_not_empty">Family introduction must not be empty</string>
    <string name="family_profile_not_empty">Family profile must not be empty</string>
    <string name="addfamily_backpressed_msg">Do you want to cancel to add family?</string>
    <string name="already_have_family">Do you already have family?</string>
    <string name="already_have_family_msg">Your family member must invite you</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My profile</string>
    <string name="login_fail">Login Failed</string>
    <string name="email_password_not_correct">Email or password is not correct</string>
    <string name="signup_fail">Sign up failed. Try again.</string>
    <string name="chief">chief</string>
    <string name="addfamily_fail">Add family failed. Try again.</string>
    <string name="ok">Ok</string>
    <string name="event">Event Name</string>
    <string name="error">There\'s a problem. Try again.</string>
    <string name="send">send</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="write_caption">Write a caption</string>
    <string name="share">Share</string>
    <string name="caption_not_empty">Caption must not be empty</string>
    <string name="profile">Profile</string>
    <string name="set_nickname">Set your nickname</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="add_member">Add member</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="report">Report</string>
    <string name="change_succeed">Change Succeed</string>
    <string name="cannot_change_email">You cannot change email address</string>
    <string name="comment">Comment</string>
    <string name="post">Post</string>
    <string name="member">Member</string>
    <string name="how_to_be_very_me">How to be very me</string>
    <string name="private_post">private post</string>
    <string name="message">Message</string>
    <string name="my_public">public</string>
    <string name="my_private">private</string>
    <string name="no_result">No result</string>
</resources>