<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintVertical_chainStyle="packed">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/signup"
            app:titleTextColor="@color/quantum_white_100"
            app:titleCentered="true"
            android:background="@color/red900"
            app:navigationIcon="@drawable/ic_arrow_white_24px"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignupActivity"
            android:background="@android:color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/signupActivity_imageview_profile"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/profile_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cameraImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:srcCompat="@drawable/photo_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageLayout"
                    app:layout_constraintBottom_toTopOf="@+id/nameTextInput">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupActivity_edittext_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
                    app:layout_constraintBottom_toTopOf="@+id/passwordTextInput">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupActivity_edittext_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextInput"
                    app:layout_constraintBottom_toTopOf="@+id/infoTextInput">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupActivity_edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black"
                        android:singleLine="true"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/infoTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/introduce"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
                    app:layout_constraintBottom_toTopOf="@+id/signupActivity_button_signup">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupActivity_edittext_info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signupActivity_button_signup"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/signup"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoTextInput"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ProgressBar
                android:id="@+id/signupactivity_progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>