<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/post"
            app:titleTextColor="@color/white"
            app:titleCentered="true"
            android:background="@drawable/berryme_gradiant"
            app:navigationIcon="@drawable/ic_arrow_white_24px"/>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/userRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/titleBar">
        <ImageView
            android:id="@+id/listitem_imageview_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/ic_launcher_round"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@+id/listitem_imageview_profile"
            android:layout_toLeftOf="@+id/listitem_imageview_menu">
            <TextView
                android:id="@+id/listitem_textview_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="name"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/listitem_textview_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="time"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/listitem_imageview_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_menu"
            android:backgroundTint="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/pictureFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userRelativeLayout">
        <ImageView
            android:id="@+id/listitem_imageview_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            android:adjustViewBounds="true"
            android:padding="5dp"/>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/listitem_animation_like"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/likes"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            android:visibility="gone"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/heartRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_below="@+id/pictureFrameLayout">
        <TextView
            android:id="@+id/listitem_textview_valuename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nickname"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/listitem_textview_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="value"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_toRightOf="@+id/listitem_textview_valuename"
            android:layout_toLeftOf="@+id/listitem_imageview_heart"/>
        <ImageView
            android:id="@+id/listitem_imageview_heart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_love_blank"
            android:layout_toLeftOf="@+id/listitem_textview_likenum"/>
        <TextView
            android:id="@+id/listitem_textview_likenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heartRelativeLayout"
        android:layout_above="@+id/commentLinearLayout"/>

    <LinearLayout
        android:id="@+id/commentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/detailactivity_comment_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/comment"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/round"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/detailactivity_comment_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:text="@string/send"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>